tests/fixtures/syntax/valid/comment_only_line_in_assertion_block.repor
case "comment only line in assertion block" {
  $ true
  assert {
    // a standalone comment inside the assertion block
    exit 0
  }
}
